# codex-limit-patch

./: .gitignore  README.md  README_zh.md  pyproject.toml  settings.example.json
codex_limit_patch/: __init__.py  cli.py  client.py  display.py  local_probe.py  overlay.py  parser.py  private_endpoint.py
codex_limit_patch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
codex_limit_patch/usage_monitor/: __init__.py  alerts.py  claude_logs.py  collector.py  demo.py  gemini_logs.py  live_demo.py  macos_menubar.py  menubar_model.py  models.py  multi_live_demo.py  three_source_demo.py
demos/milestone-1/: README.md  dashboard.js  demo-data.js  index.html  snapshots.json  styles.css
demos/milestone-2/: README.md  demo-data.example.js  index-live.html  index.html
demos/milestone-3/: README.md  (+3 more)
tests/: test_cli_entrypoint.py  test_rate_limit_fallback.py  test_reset_bank_parser.py  test_usage_monitor_alerts.py  test_usage_monitor_claude_logs.py  test_usage_monitor_claude_provider.py  test_usage_monitor_codex_provider.py  test_usage_monitor_collector.py  test_usage_monitor_deepseek_provider.py  test_usage_monitor_demo.py  test_usage_monitor_gemini_logs.py  test_usage_monitor_gemini_provider.py  test_usage_monitor_kimi_provider.py  test_usage_monitor_live_demo.py  test_usage_monitor_macos_menubar.py  test_usage_monitor_menubar_model.py  test_usage_monitor_minimax_provider.py  test_usage_monitor_models.py  test_usage_monitor_multi_live_demo.py  test_usage_monitor_providers.py  test_usage_monitor_three_source_demo.py  test_usage_monitor_zhipu_provider.py
(+22 files in other folders)
