[project]
name = "codex-limit-patch"
version = "0.1.0"
description = "Cross-platform local Codex quota and reset bank viewer."
requires-python = ">=3.8"

[project.scripts]
codex_limit_patch = "codex_limit_patch.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["codex_limit_patch*"]
